# dioxus-surreal

./: .gitignore  Cargo.toml  Dioxus.toml
src/: main.rs
